--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.0.0",
     "axios": "^1.7.9",
+    "backend": "file:..",
     "canvas-confetti": "^1.9.3",
     "chart.js": "^4.4.8",
     "chartjs-plugin-annotation": "^3.0.1",
